# awesome-stack

./: 230-plex.sh  231-jellyfin-proxmox.sh  README.md  WIREGUARD-GLUETUN-SOLUTION.md  docker-compose.yml  docs-processor.py  final-fix.sh  privatekey  publickey  rebuild-ultimate-stack.sh  server_privatekey  server_publickey
Ansible/: README.md
Coding/: README.md
Coding/archived-projects/production/open-interpreter-gui/: CMakeLists.txt  chatwidget.cpp  chatwidget.h  codeeditor.h  filemanagerwidget.h  interpreterworker.cpp  interpreterworker.h  mainwindow.cpp  open-interpreter-gui.desktop
Coding/cpp-projects/ArchBackupPro/src/build-monitoring/: .ninja_deps  CMakeLists.txt  build.ninja
Coding/cpp-projects/Warp GUI/: CMakeLists.txt
Coding/cpp-projects/Warp GUI/src/: mainwindow.cpp  mainwindow.h  settingsdialog.h  terminalwidget.h
Coding/documentation/: AI Assistant tabs  Kernel Tools tabs
Coding/python-projects/: README.md
cleanup-organizer/: docker-compose.yml
docs/: deploy_ssl_auto.sh  vaultwarden_setup.md
docs-analyzer/: Dockerfile  main.py  requirements.txt
homeassistant-configs/: binary_sensor.yaml  configuration.yaml  rest_commands.yaml  scripts.yaml
homeassistant-configs-fixed/: configuration.yaml  rest_commands.yaml  sensors.yaml
legacy/: README.md  auto-fix-alexa.sh
legacy/Coding/: PROJECT_ANALYSIS_REPORT.md
legacy/Coding/cpp-projects/ArchBackupPro/: CMakeLists.txt  archbackuppro-monitor  archbackuppro.desktop.in  install-complete.sh  install-monitor.sh  project_log.md  test-monitoring-functions.sh  test-monitoring.sh
legacy/Coding/cpp-projects/ArchBackupPro/src/: example_main_integration.cpp  main.cpp  mainwindow.cpp  monitoringclass.cpp  monitoringclass.h  monitoringmanager.cpp  monitoringmanager.h  restoremanager.cpp  rgbfanmanagers.cpp
legacy/Coding/cpp-projects/ArchBackupPro/src/build-monitoring/: .ninja_log  CMakeCache.txt  cmake_install.cmake
legacy/Coding/cpp-projects/ArchForgePro/src/: CMakeLists.txt  ai_assistant_extracted.h  aiassistant_widget.cpp  cleaninstallbackuprestore_widget.cpp  cleaninstallbackuprestore_widget_full.cpp  kerneltools_widget.cpp  kerneltools_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  settings_widget.cpp  softwaremanagement_widget.h
legacy/Coding/cpp-projects/Control Center/: CMakeLists.txt  README.md  enhanced_main.cpp  enhanced_rgb_controller.cpp  enhanced_rgb_controller.h  main.cpp
legacy/Coding/cpp-projects/open-interpreter-gui/: CMakeLists.txt  PKGBUILD  test_program
legacy/Coding/cpp-projects/open-interpreter-gui/src/: aiassistantmanager.cpp  chatwidget.cpp  chatwidget.h  filemanagerwidget.cpp  filemanagerwidget.h  mainwindow.cpp  mainwindow.h
legacy/Coding/cpp-projects/open_interpreter_gui_backup/: CMakeLists.txt
legacy/Coding/cpp-projects/universal-arch-installer/src/: CMakeLists.txt  UniversalArchInstaller.cpp  UniversalArchInstaller.h  mainwindow.cpp  mainwindow.h  packageinfo.cpp  packageinfo.h  packagemanager.cpp  searchthread.h
legacy/Coding/python-projects/lou/Coding/ArchForge-RGB-Control/: CMakeLists.txt  integration_log.md
legacy/Coding/python-projects/lou/Coding/ArchForge-RGB-Control/src/: fancontroller.cpp  fancontroller.h  main.cpp  mainwindow.h  rgbcommandbatcher.h  spatialeffects.cpp
legacy/Coding/python-projects/lou/Coding/ArchForgePro/: CMakeLists.txt  archforgepro.desktop.in  archforgepro.service.in  project_log.md
legacy/Coding/python-projects/lou/Coding/ArchForgePro/src/: mainwindow.h  packagemanager.h  restoremanager.h
legacy/Coding/rust-projects/OriginPC-Control-Suite/: Cargo.toml
legacy/Coding/rust-projects/OriginPC-Control-Suite/clevo_rgb/: Cargo.toml
legacy/Coding/rust-projects/OriginPC-Control-Suite/originpc_control_center/: Cargo.toml
legacy/Coding/rust-projects/OriginPC-Control-Suite/src/: main.rs
legacy/Coding/rust-projects/OriginPC-Control-Suite/src/hardware/: hid.rs
legacy/Coding/rust-projects/OriginPC-Control-Suite/src/system/: package_manager.rs
legacy/Coding/rust-projects/OriginPC-Control-Suite/src/ui/: backup_restore.rs  custom_theme.rs  software_management.rs  theme.rs
legacy/Coding/rust-projects/Rust RGB/: Cargo.toml  Session_Log  test_hidraw0.py  test_hidraw2.py
legacy/Coding/web-projects/Proxmox-gui/src-tauri/: Cargo.toml
legacy/Coding/web-projects/proxmox-native-gui/: Cargo.toml
legacy/docs-analyzer/: README.md  docker-compose.yml
legacy/homeassistant-configs/: sensors.yaml
legacy/homeassistant-configs-fixed/: binary_sensor.yaml  configuration-ai-fixed.yaml
legacy/multi-processor/: Dockerfile  docker-compose.yml  requirements.txt
legacy/open-interpreter-tauri/: connection_test.rs
lou-media-stack/: .env.example  CERTIFICATE_SETUP.md  Config-Helper.html  FIXED_ISSUES_REPORT.md  MIGRATION_COMPLETE.md  MediaStack-Apps.html  MediaStack-Maintenance-Dashboard.html  POST-DEPLOYMENT-GUIDE.html  check-dashboard-health.sh  cleanup-and-merge.sh  configure-tv-stack.sh  deploy-integrated.sh  deploy-media-stack.sh  deploy.sh  docker-compose-enhanced.yml  docker-compose-unified.yml  docker-compose.yml  fix-auxiliary-services.sh  homarr-user-config.md  hosts_update  integrate-containers.sh  migrate_containers.sh  organizr-control-config.md  prometheus.yml  quick-weather.html  rebuild-ultimate-stack.sh  setup-grandma-solution.sh  setup-unified-dashboard.sh  snapshot-gui.py  snapshot-utility.sh  weather-complete.html  weather-server.py  weather-simple.html
lou-media-stack/MediaStackController/: ARR_STACK_COMPLETE_GUIDE.md  LUNASEA_CONTROLLERS_README.md  README.md  build.gradle  gradle.properties  launch_controller.sh  local.properties  luna_sea_controller.sh  lunasea_linux_controller.py  services_config.json  settings.gradle  setup_project.sh
lou-media-stack/Readarr-develop/: .gitignore  README.md  azure-pipelines.yml  docs.sh  package.json
lou-media-stack/ai-recommendation-engine/: Dockerfile  app.py  requirements.txt
lou-media-stack/certs/: mediastack.conf  mediastack.crt
lou-media-stack/docs/: DNS_SERVER_SETUP.md  (+4 more)
lou-media-stack/qt6_project/: CMakeLists.txt
media-playlists/: README.md
multi-processor/: main.py
(+1575 files in other folders)
