[package]
name = "proxmox-manager"
version = "1.0.0"
description = "Modern Proxmox Management Interface"
authors = ["Proxmox GUI Team"]
license = "MIT"
repository = "https://github.com/your-org/proxmox-gui"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
rand = "0.8"
ssh2 = "0.9"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
